<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_estudiante" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_estudiante"
        android:layout_below="@id/etNombre" />

    <Spinner
        android:id="@+id/spinnerGrado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etApellido" />

    <Spinner
        android:id="@+id/spinnerMateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerGrado" />

    <EditText
        android:id="@+id/etNotaFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota_final"
        android:layout_below="@id/spinnerMateria"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:layout_below="@id/etNotaFinal" />

</RelativeLayout>
